# relational-database-basic

./: CLAUDE.md  README.md  mise.toml  pyproject.toml
examples/: s11_create_table.py  s12_insert_data.py  s13_select_data.py  s14_update_data.py  s15_delete_data.py  s21_create_table.py  s22_insert_data.py  s23_select_data.py  s24_update_data.py  s25_delete_data.py  utils.py
tests/: conftest.py  test_s1x_series.py  test_s2x_series.py
